--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "build/web/**",
+      "src": "docs/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "build/web/index.html"
+      "dest": "docs/index.html"
     }
   ]
 }
